# OpenLap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  OpenLap.spec  README.md  TODO.md  aim_data.py  app_config.py  app_shell.py  auto_sync.py  data_model.py  delta_time.py  design_tokens.py  exceptions.py  export_runner.py  gauge_channels.py  gpx_data.py  main.py  motec_data.py  openlap.pyw  overlay_editor.py  overlay_themes.py  overlay_utils.py  overlay_worker.py  package-lock.json  package.json  page_data.py  page_export.py  page_settings.py  pyproject.toml  racebox_data.py  racebox_downloader.py  reference_resolver.py  session_scanner.py  style_registry.py  track_map_cache.py  utils.py  video_renderer.py  vitest.config.js  weather.py  (+3 more)
.github/: FUNDING.yml
.github/workflows/: release.yml
frontend/: index.html
frontend/css/: app.css
frontend/js/: api.js  router.js  state.js
frontend/js/gauges/: bar.js  base.js  compare.js  delta.js  dial.js  gmeter.js  image.js  info.js  lean.js  line.js  map.js  multiline.js  numeric.js  scoreboard.js  sector_bar.js  splits.js
frontend/js/pages/: data.js  editor.js  export.js  settings.js
frontend/tests/: data.test.js  export.test.js  helpers.js  state.test.js
rthooks/: pyi_rth_path.py
styles/: gauge_bar.py  gauge_compare.py  gauge_delta.py  gauge_dial.py  gauge_gmeter.py  gauge_image.py  gauge_info.py  gauge_lap_scoreboard.py  gauge_lean.py  gauge_line.py  gauge_multiline.py  gauge_numeric.py  gauge_sector_bar.py  gauge_splits.py  map_circuit.py  map_progress.py  map_zoomed.py  speedo.py  telemetry_dashboard.py  telemetry_gforce.py  telemetry_inputs.py  telemetry_mini_hud.py  telemetry_strip.py
tests/: conftest.py  test_aim_data.py  test_app_config.py  test_delta_time.py  test_export_runner.py  test_gauge_channels.py  test_gpx_data.py  test_motec_data.py  test_racebox_data.py  test_session_scanner.py  test_video_renderer.py  test_video_server.py  test_webview_api.py
tests/fixtures/: aim_session.csv  not_a_telemetry_file.csv  racebox_bike.csv  racebox_car.csv  sample.gpx  sample_no_speed.gpx
